--- a/Sheffle/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Sheffle/en.lproj/MainStoryboard_iPhone.storyboard
@@ -20,64 +20,24 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="WXl-kH-xM6">
+                            <view contentMode="scaleToFill" id="mAC-GS-C4F">
                                 <rect key="frame" x="0.0" y="100" width="320" height="272"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="IuC-Tn-Tyk">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                    <connections>
-                                        <outlet property="delegate" destination="fXz-FU-MVf" id="jpW-Bp-ajA"/>
-                                    </connections>
-                                </searchBar>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ShelfCell" textLabel="g6w-Yp-tF2" detailTextLabel="Swd-Xd-WVX" style="IBUITableViewCellStyleSubtitle" id="8HN-uQ-J92">
-                                        <rect key="frame" x="0.0" y="66" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="g6w-Yp-tF2">
-                                                    <rect key="frame" x="10" y="2" width="38" height="22"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                </label>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Swd-Xd-WVX">
-                                                    <rect key="frame" x="10" y="24" width="47" height="18"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                </label>
-                                            </subviews>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                        <connections>
-                                            <segue destination="uxJ-Oe-mKz" kind="push" identifier="showDetail" id="K4R-u0-5nn"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="cDV-lN-8bz"/>
                     <connections>
                         <outlet property="readerWrapperView" destination="Rnt-tu-nW3" id="t2r-tF-D59"/>
-                        <outlet property="searchBar" destination="IuC-Tn-Tyk" id="Gfh-zU-Wzj"/>
                         <outlet property="searchDisplayController" destination="FUa-M4-BAn" id="EQD-Tp-hn8"/>
-                        <outlet property="tableView" destination="WXl-kH-xM6" id="vXt-L7-ce1"/>
+                        <outlet property="shelfWrapperView" destination="mAC-GS-C4F" id="rsC-Bm-yXN"/>
                     </connections>
                 </viewController>
                 <searchDisplayController id="FUa-M4-BAn">
                     <connections>
                         <outlet property="delegate" destination="fXz-FU-MVf" id="x4X-Sz-G1n"/>
-                        <outlet property="searchBar" destination="IuC-Tn-Tyk" id="6ld-wQ-I4B"/>
                         <outlet property="searchContentsController" destination="fXz-FU-MVf" id="qdP-0q-sGh"/>
                         <outlet property="searchResultsDataSource" destination="fXz-FU-MVf" id="Qwe-n7-U5A"/>
                         <outlet property="searchResultsDelegate" destination="fXz-FU-MVf" id="4Gt-Uv-CyE"/>
@@ -86,19 +46,81 @@
             </objects>
             <point key="canvasLocation" x="270" y="-49"/>
         </scene>
-        <!--View Controller-->
+        <!--Table Shelf View Controller-->
+        <scene sceneID="k76-tt-HgT">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BpL-8L-PTj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController storyboardIdentifier="tableShelfView" id="JAL-1y-kyr" customClass="SFTableShelfViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="sGT-gA-R1p">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="xan-nC-Wdj">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="JAL-1y-kyr" id="UxN-Sl-EkC"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TableShelfCell" id="bCC-5Y-vTF">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <connections>
+                                    <segue destination="uxJ-Oe-mKz" kind="push" identifier="showBookFromTable" id="PmY-ak-2Fc"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="JAL-1y-kyr" id="me2-L9-S2q"/>
+                            <outlet property="delegate" destination="JAL-1y-kyr" id="T4q-II-UdF"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="61h-z5-A6i" id="X2l-0T-0ku"/>
+                    </connections>
+                </tableViewController>
+                <searchDisplayController id="61h-z5-A6i">
+                    <connections>
+                        <outlet property="delegate" destination="JAL-1y-kyr" id="jY3-F1-GB3"/>
+                        <outlet property="searchBar" destination="xan-nC-Wdj" id="FaW-tP-pqi"/>
+                        <outlet property="searchContentsController" destination="JAL-1y-kyr" id="SLa-QL-9yB"/>
+                        <outlet property="searchResultsDataSource" destination="JAL-1y-kyr" id="Z2J-Nq-spw"/>
+                        <outlet property="searchResultsDelegate" destination="JAL-1y-kyr" id="rEp-ow-7TJ"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="694" y="320"/>
+        </scene>
+        <!--Grid Shelf View Controller-->
         <scene sceneID="rfk-hA-R73">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Dv-IY-1oP" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="VQD-7P-aen" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="gridShelfView" id="VQD-7P-aen" customClass="SFGridShelfViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3Eu-t4-yRu">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="OjG-Y6-K4D" customClass="GSBookShelfView">
+                                <rect key="frame" x="0.0" y="-3" width="326" height="463"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="bookShelfView" destination="OjG-Y6-K4D" id="a3r-Og-eGZ"/>
+                        <segue destination="uxJ-Oe-mKz" kind="push" identifier="showBookFromGrid" id="Z1b-lc-JaZ"/>
+                    </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="770" y="-307"/>
+            <point key="canvasLocation" x="694" y="-336"/>
         </scene>
         <!--Book View Controller-->
         <scene sceneID="gI9-Kb-Zf8">
@@ -106,14 +128,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dne-OV-Wpb" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="uxJ-Oe-mKz" customClass="SFBookViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KNe-Oj-8lQ">
-                        <rect key="frame" x="0.0" y="64" width="320" height="372"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="DQT-qT-1qj"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="770" y="293"/>
+            <point key="canvasLocation" x="1252" y="-49"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1fj-et-YaO">
@@ -135,9 +157,36 @@
             <point key="canvasLocation" x="-180" y="-49"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="GSBookShelfView" superclassName="UIScrollView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GSBookShelfView.h"/>
+        </class>
+        <class className="SFBookViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SFBookViewController.h"/>
+        </class>
+        <class className="SFGridShelfViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SFGridShelfViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="bookShelfView" candidateClass="GSBookShelfView"/>
+            </relationships>
+        </class>
+        <class className="SFShelfViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SFShelfViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="readerWrapperView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="shelfWrapperView" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="SFTableShelfViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SFTableShelfViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="Z1b-lc-JaZ"/>
+    </inferredMetricsTieBreakers>
 </document>
