--- a/Sheffle/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Sheffle/en.lproj/MainStoryboard_iPhone.storyboard
@@ -16,12 +16,12 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="Rnt-tu-nW3">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="0.0"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" id="mAC-GS-C4F">
-                                <rect key="frame" x="0.0" y="100" width="320" height="272"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="372"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
@@ -103,22 +103,22 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Dv-IY-1oP" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="gridShelfView" id="VQD-7P-aen" customClass="SFGridShelfViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3Eu-t4-yRu">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="OjG-Y6-K4D" customClass="GSBookShelfView">
-                                <rect key="frame" x="0.0" y="-3" width="326" height="463"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            </scrollView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
                     <connections>
                         <outlet property="bookShelfView" destination="OjG-Y6-K4D" id="a3r-Og-eGZ"/>
                         <segue destination="uxJ-Oe-mKz" kind="push" identifier="showBookFromGrid" id="Z1b-lc-JaZ"/>
                     </connections>
                 </viewController>
+                <view contentMode="scaleToFill" id="3Eu-t4-yRu">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="OjG-Y6-K4D" customClass="GSBookShelfView">
+                            <rect key="frame" x="0.0" y="0.0" width="326" height="460"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        </scrollView>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                </view>
             </objects>
             <point key="canvasLocation" x="694" y="-336"/>
         </scene>
@@ -157,30 +157,6 @@
             <point key="canvasLocation" x="-180" y="-49"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="GSBookShelfView" superclassName="UIScrollView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GSBookShelfView.h"/>
-        </class>
-        <class className="SFBookViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SFBookViewController.h"/>
-        </class>
-        <class className="SFGridShelfViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SFGridShelfViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="bookShelfView" candidateClass="GSBookShelfView"/>
-            </relationships>
-        </class>
-        <class className="SFShelfViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SFShelfViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="readerWrapperView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="shelfWrapperView" candidateClass="UIView"/>
-            </relationships>
-        </class>
-        <class className="SFTableShelfViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SFTableShelfViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
